syntax = "proto3";
package osmosis.concentratedliquidity.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/any.proto";
import "osmosis/concentrated-liquidity/params.proto";
import "osmosis/concentrated-liquidity/position.proto";
import "osmosis/concentrated-liquidity/tickInfo.proto";

option go_package = "github.com/osmosis-labs/osmosis/v15/x/concentrated-liquidity/types/genesis";

// FullTick contains tick index and pool id along with other tick model
// information.
message FullTick {
  // pool id associated with the tick.
  uint64 pool_id = 1 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  // tick's index.
  int64 tick_index = 2 [ (gogoproto.moretags) = "yaml:\"tick_index\"" ];
  // tick's info.
  TickInfo info = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"tick_info\""
  ];
}

// PoolData represents a serialized pool along with its ticks
// for genesis state.
message PoolData {
  // pool struct
  google.protobuf.Any pool = 1 [ (cosmos_proto.accepts_interface) = "PoolI" ];
  // pool's ticks
  repeated FullTick ticks = 2
      [ (gogoproto.moretags) = "yaml:\"ticks\"", (gogoproto.nullable) = false ];
  AccumObject accum_object = 3
      [ (gogoproto.moretags) = "yaml:\"accum_object\"" ];
}

// GenesisState defines the concentrated liquidity module's genesis state.
message GenesisState {
  // params are all the parameters of the module
  Params params = 1 [ (gogoproto.nullable) = false ];
  // pool data containining serialized pool struct and ticks.
  repeated PoolData pool_data = 2;

  repeated Position positions = 3 [ (gogoproto.nullable) = false ];
}

message AccumObject {
  // In original struct of Accum object, store.KVStore is stored together.
  // For handling genesis, we do not need to include store.KVStore since we use
  // CL module's KVStore.

  // Accumulator's name (pulled from AccumulatorContent)
  string name = 1 [ (gogoproto.moretags) = "yaml:\"name\"" ];

  repeated cosmos.base.v1beta1.DecCoin value = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];

  string total_shares = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
