syntax = "proto3";
// this is a legacy package that requires additional migration logic
// in order to use the correct packge. Decision made to use legacy package path
// until clear steps for migration logic and the unknowns for state breaking are
// investigated for changing proto package.
package osmosis.concentratedliquidity.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/osmosis-labs/osmosis/v13/x/concentrated-liquidity/model";

message Position {
  string liquidity = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"liquidity\"",
    (gogoproto.nullable) = false
  ];
}

message RangePosition {
  string liquidity = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.moretags) = "yaml:\"liquidity\"",
    (gogoproto.nullable) = false
  ];
  string address = 2 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  bool zero_for_one = 3 [ (gogoproto.moretags) = "yaml:\"zero_for_one\"" ];
  uint64 lower_tick = 4 [ (gogoproto.moretags) = "yaml:\"lower_tick\"" ];
  uint64 upper_tick = 5 [ (gogoproto.moretags) = "yaml:\"upper_tick\"" ];
}
